name:                hakan
version:             0.1.0.0
synopsis:            Lambda calculus with HM type system.
description:         Lambda calculus with HM type system.
homepage:            https://github.com/bagnalla/hakan
license:             MIT
license-file:        LICENSE
author:              Alexander Bagnall
maintainer:          cs.ohio.edu/~abagnall
copyright:           2018 Alexander Bagnall
category:            Programming Languages
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Symtab Ast Core Lexer Parser Tycheck Eval Interp
                       Preprocessor Gensym Util Context Unify
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
                     , array
                     , parsec
                     , QuickCheck
                     , generic-random
  default-language:    Haskell2010

executable hakan-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2
                       -- -ddump-simpl-stats
  build-depends:       base
                     , hakan
                     , array
                     , parsec
  default-language:    Haskell2010
  build-tools:         alex
                     , happy

test-suite hakan-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hakan
                     , QuickCheck
                     , test-invariant
                     , generic-random
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bagnalla/hakan
